--- a/src/components/list-items/index.css
+++ b/src/components/list-items/index.css
@@ -1,6 +1,7 @@
 .item {
 	display: flex;
 	flex-flow: row;
+	color: #13314D;
 }
 
 .item:hover {
@@ -17,14 +18,6 @@
 	margin: 0;
 }
 
-.name {
-	
-}
-
-.quantity {
-	
-}
-
 .clear {
 	background-color: transparent;
 	outline: none;
@@ -33,4 +26,30 @@
 
 .clear:hover {
 	cursor: pointer;
+}
+
+.list {
+	display: flex;
+	padding: 10px;
+	border-left: 2px dashed #181A1C;
+	height: 100%;
+	background-color: #FFFACD;
+}
+
+.list li {
+	padding-right: 10px;
+	float: left;
+}
+
+.placeholder {
+	align-self: center;
+	font-size: .65em;
+	line-height: 1.75;
+	text-transform: uppercase;
+	text-align: center;
+	width: 100%;
+}
+
+.children {
+	padding-top: 6em;
 }
