--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -1,14 +1,14 @@
 .nav {
 	display: flex;
-	padding: 1em;
 	align-items: baseline;
 	position: fixed;
 	width: 100%;
+	z-index: 1000;
 }
 
 .logo {
 	height: 50px;
-	margin-left: 25px;
+	padding-left: 25px;
 }
 
 .navMain {
@@ -16,6 +16,15 @@
 	text-transform: uppercase;
 	font-size: 1.5em;
 	font-weight: 300;
+}
+
+.navLeft {
+	padding: 1em 0;
+	width: 70%;
+	background-color: white;
+	flex-flow: row;
+	display: flex;
+	align-items: baseline;
 }
 
 .list {
