--- a/src/components/side-container/side-container.css
+++ b/src/components/side-container/side-container.css
@@ -1,7 +1,9 @@
 .sideContainer {
-	width: 40%;
+	width: 30%;
 	float: right;
 	min-height: 100vh;
+	position: fixed;
+	margin-left: 70%;
 	background-color: #181A1C;
 	color: white;
 }
