--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,15 @@
+* {
+	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
+	box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: 'Work Sans', sans-serif;
+  height: 100%;
+  background-color: #FFFFF0;
 }
 
 ul {
@@ -13,7 +21,6 @@ ul {
 a {
 	text-decoration: none;
 	color: #49627F;
-
 }
 
 a:hover {
