--- a/src/components/form-components/index.css
+++ b/src/components/form-components/index.css
@@ -33,7 +33,7 @@
 	border-bottom: 3px dashed #13314D;
 	width: 50px;
 	text-align: center;
-	margin: 10px 0;
+	margin-bottom: 10px;
 	padding-bottom: 5px;
 }
 
