cool grey background

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
   padding: 0;
   font-family: 'Work Sans', sans-serif;
   height: 100%;
-  background-color: #FFFFF0;
+  background-color: #fdfdf9;
 }
 
 ul {
